// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio Default 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <div
          class="custom-control custom-radio"
        >
          <input
            class="custom-control-input"
            id="radio1"
            label="Radio 1"
            name="radio1"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio1"
          >
            Radio 1
          </label>
        </div>
        <div
          class="custom-control custom-radio"
        >
          <input
            class="custom-control-input"
            id="radio2"
            label="Radio 2"
            name="radio2"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio2"
          >
            Radio 2
          </label>
        </div>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Radio Error Feedback 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
        >
          Select from the options below
        </label>
        <div
          class="is-invalid custom-control custom-radio"
        >
          <input
            class="custom-control-input is-invalid"
            id="radio1"
            label="Radio 1"
            name="radio1"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio1"
          >
            Radio 1
          </label>
        </div>
        <div
          class="is-invalid custom-control custom-radio"
        >
          <input
            class="custom-control-input is-invalid"
            id="radio2"
            label="Radio 2"
            name="radio2"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio2"
          >
            Radio 2
          </label>
        </div>
        <div
          class="invalid-feedback"
        >
          You must select at least one option
        </div>
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Radio Help Text 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
        >
          Select from the options below
        </label>
        <div
          class="custom-control custom-radio"
        >
          <input
            class="custom-control-input"
            id="radio1"
            label="Radio 1"
            name="radio1"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio1"
          >
            Radio 1
          </label>
        </div>
        <div
          class="custom-control custom-radio"
        >
          <input
            class="custom-control-input"
            id="radio2"
            label="Radio 2"
            name="radio2"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio2"
          >
            Radio 2
          </label>
        </div>
        <div
          class="invalid-feedback"
        />
        <small
          class="form-text text-muted"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et orci diam. Donec rutrum odio sit amet ante porta, sed tempus est varius.
        </small>
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Radio Initial Values 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
        >
          Select from the options below
        </label>
        <div
          class="custom-control custom-radio"
        >
          <input
            class="custom-control-input"
            id="radio1"
            label="Radio 1"
            name="radio1"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio1"
          >
            Radio 1
          </label>
        </div>
        <div
          class="custom-control custom-radio"
        >
          <input
            checked=""
            class="custom-control-input"
            id="radio2"
            label="Radio 2"
            name="radio2"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio2"
          >
            Radio 2
          </label>
        </div>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Radio Label 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
        >
          Select from the options below
        </label>
        <div
          class="custom-control custom-radio"
        >
          <input
            class="custom-control-input"
            id="radio1"
            label="Radio 1"
            name="radio1"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio1"
          >
            Radio 1
          </label>
        </div>
        <div
          class="custom-control custom-radio"
        >
          <input
            class="custom-control-input"
            id="radio2"
            label="Radio 2"
            name="radio2"
            type="radio"
          />
          <label
            class="custom-control-label"
            for="radio2"
          >
            Radio 2
          </label>
        </div>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
